# sphinx-performance

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  performance_issues.rst  pyproject.toml
.github/workflows/: format_lint_docs.yml
docs/: cli.rst  conf.py  doc-requirements.txt  examples.rst  index.rst  installation.rst  test_env.rst
docs/_static/: custom.css
docs/test_project/: index.rst  needs.rst
docs/test_projects/: basic.rst  index.rst  needs.rst  theme.rst
sphinx_performance/: __init__.py  analysis.py  call.py  config.py  main.py  patches.py  performance.py  projectenv.py  sphinx_events.py  utils.py
sphinx_performance/projects/basic/: conf.template  index.template  performance.py  requirements.template
sphinx_performance/projects/events/: README.md  conf.template  index.template  page.template  performance.py
sphinx_performance/projects/events/event_extension/: __init__.py
sphinx_performance/projects/needs/: conf.template  index.template  page.template  performance.py  requirements.template
sphinx_performance/projects/theme/: conf.template  performance.py  requirements.template
sphinx_performance/renderers/: __init__.py  html.py
